# AFSS-Tool

./: .gitignore  pyproject.toml
afss/: anonymize.py  apply.py  cli.py  config.py  db.py  dedupe.py  migrate_legacy.py  naming.py  normalize.py  report.py  resolve.py  scan.py  suggest.py  tag_cli.py  tagging.py
afss/artist_editor/: app.py  import_parsers.py  store.py
afss/artist_editor/templates/: artist_form.html  artist_list.html
afss/dashboard/: app.py
afss/dashboard/templates/: dashboard.html
afss/tag_web/: app.py
afss/tag_web/templates/: index.html
config/: legacy_profiles.example.yml  naming_template.yml
legacy/config/: artists_cleaned.json  legacy_profiles.yml  providers_cleaned.json
legacy/config/Filetrees/cleaned/: filetree_an_cleaned.txt
legacy/core/: config.py  db.py
legacy/modules/legacy_importer/: __init__.py  scan.py
legacy/tools/: afss_legacy_import.py  guess_legacy_profiles.py
legacy/tools/dump_filetree/: dump_filetree.py
legacy/tools/foldertree/: folder_tree.py
legacy/tools/json_cleaner/: cleaner.py
legacy/tools/omni_cleaner/: afss_cleaner.py  howto_afss_cleaner.bash
legacy/tools/txt_cleaner/: howto_text_cleaner  text_cleaner.py
tests/: test_anonymize.py  test_apply.py  test_artist_editor_app.py  test_artist_editor_store.py  test_dashboard.py  test_dedupe.py  test_import_parsers.py  test_migrate_legacy.py  test_naming.py  test_resolve.py  test_scan.py  test_suggest.py  test_tag_cli.py  test_tag_web.py  test_tagging.py
