[project]
name = "afss"
version = "1.0.0"
description = "AFSS media consolidation CLI"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
afss = "afss.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["afss*"]
